--- a/CW/week16/task_management/templates/task/task_detail.html
+++ b/CW/week16/task_management/templates/task/task_detail.html
@@ -43,6 +43,7 @@
             color: #777;
         }
 
+
     </style>
 {% endblock %}
 
@@ -51,18 +52,48 @@
         <div class="container px-4 px-lg-5">
             <div class="row d-flex">
                 <div class="col-md-10">
-                    <div class="card p-3 py-4" style="background: rgba(108, 85, 85, .7)">
-                        <div class="mt-3">
-                            <a data-toggle="collapse" href="#collapseExample" role="button"
+                    <div class="card p-3 py-4 " style="background: rgba(108, 85, 85, .7)">
+                        <div class="mt-3" style=" display: inline-block; margin-right: 20px;">
+                            <a data-toggle="collapse" href="#collapseExample1" role="button"
                                aria-expanded="false"
-                               aria-controls="collapseExample"
-                               class="advanced text-decoration-none text-light"> Add new task
+                               aria-controls="collapseExample1"
+                               class="advanced text-decoration-none text-light">Add new tag
                                 <i class="fa fa-angle-down"></i>
                             </a>
-                            <div class="collapse" id="collapseExample">
+                            <div class="collapse" id="collapseExample1">
                                 <div class="card card-body">
                                     <form action="{% url 'task_detail' task.id %}" method="POST">
                                         {% csrf_token %}
+                                        <input type="hidden" name="create_tag" value="create_tag">
+                                        <div class="row g-3 mt-2 flex-wrap">
+                                            <div class="col-md-4">
+                                                <div class="form-group text-dark">
+                                                    <label for="task_name"> </label>
+                                                    <input type="text" class="form-control" id="task_name"
+                                                           placeholder="Tag label:"
+                                                           name="tag_label">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <button class="btn btn-secondary btn-block">Create tag</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <a data-toggle="collapse" href="#collapseExample2" role="button"
+                               aria-expanded="false"
+                               aria-controls="collapseExample2"
+                               class="advanced text-decoration-none text-light">Add new task
+                                <i class="fa fa-angle-down"></i>
+                            </a>
+                            <div class="collapse" id="collapseExample2">
+                                <div class="card card-body">
+                                    <form action="{% url 'task_detail' task.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="update_task" value="create_tag">
                                         <div class="row g-3 mt-2 flex-wrap">
                                             <div class="col-md-4">
                                                 <div class="form-group text-dark">
@@ -85,7 +116,6 @@
                                                     <select id="select" class="form-select" multiple
                                                             aria-label="multiple select example" name="tags">
                                                         <option selected>Select task tag(multi choice):</option>
-
                                                         {% for tag in tags %}
                                                             {% if tag in task.tag.all %}
                                                                 <option value="{{ tag.id }}"
@@ -120,11 +150,11 @@
                                                         <option selected>Select task category:</option>
                                                         {% for category in categories %}
                                                             {% if category.id == task.category.id %}
-                                                                <option value="{{ category.id }}" selected> {{ category.name }} </option>
+                                                                <option value="{{ category.id }}"
+                                                                        selected> {{ category.name }} </option>
                                                             {% else %}
                                                                 <option value="{{ category.id }}"> {{ category.name }} </option>
                                                             {% endif %}
-
                                                         {% endfor %}
                                                     </select>
                                                     <label for="select" class="form-label select-label"></label>
@@ -134,13 +164,14 @@
                                                 <div class="form-group">
                                                     <label for="formGroupExampleInput3"></label>
                                                     <input required type="date" class="form-control"
-                                                           id="formGroupExampleInput3" placeholder="due_date" value="{{task.due_date|date:'Y-m-d'}}"
+                                                           id="formGroupExampleInput3" placeholder="due_date"
+                                                           value="{{ task.due_date|date:'Y-m-d' }}"
                                                            name="due_date">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-4">
-                                            <button class="btn btn-secondary btn-block">Add</button>
+                                            <button class="btn btn-secondary btn-block">Update task</button>
                                         </div>
                                     </form>
                                 </div>
