--- a/CW/week16/task_management/templates/task/task_detail.html
+++ b/CW/week16/task_management/templates/task/task_detail.html
@@ -2,48 +2,11 @@
 {% load static %}
 
 {% block style %}
+    <link rel="stylesheet" href="{% static 'css/task_detail.css' %}">
     <style>
         body {
             background-image: url("{% static 'image/img-05.jpg' %}") !important;
         }
-
-        /* make the content take up more vertical space */
-        .content-wrapper {
-            min-height: calc(100vh - 200px); /* adjust the value as needed */
-        }
-
-        /* style for the card */
-        .card {
-            border-radius: 20px;
-            border: none;
-            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .card-title {
-            font-size: 2.5rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        .card-text {
-            font-size: 1.5rem;
-            color: #555;
-            margin-bottom: .8rem;
-        }
-
-        .card-tag {
-            font-size: 1.3rem;
-            color: #6c5555;
-            margin-bottom: 1.5rem;
-        }
-
-        .card-small {
-            font-size: 1.2rem;
-            color: #777;
-        }
-
-
     </style>
 {% endblock %}
 
