--- a/CW/week16/task_management/templates/task/home.html
+++ b/CW/week16/task_management/templates/task/home.html
@@ -27,13 +27,15 @@
             <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="{% static 'image/realm.jpg' %}"
                                        alt="..."></div>
             <div class="col-lg-5 ">
-                <h1 class="font-weight-light"><a class="text-decoration-none text-dark"
-                                                 href='{% url 'task_detail' first_task.id %}'>{{ first_task.title }}</a>
-                </h1>
-                <p>{{ first_task.description | truncatewords:5 }}</p>
-                <p class="card-small">Status: {{ first_task.get_status_display }}</p>
-                <p class="card-small">Due date: {{ first_task.due_date }}</p>
-                <a class="btn btn-secondary" href="{% url 'task_detail' first_task.id %}">More info!</a>
+                {% if first_task %}
+                    <h1 class="font-weight-light"><a class="text-decoration-none text-dark"
+                                                     href='{% url 'task_detail' first_task.id %}'>{{ first_task.title }}</a>
+                    </h1>
+                    <p>{{ first_task.description | truncatewords:5 }}</p>
+                    <p class="card-small">Status: {{ first_task.get_status_display }}</p>
+                    <p class="card-small">Due date: {{ first_task.due_date }}</p>
+                    <a class="btn btn-secondary" href="{% url 'task_detail' first_task.id %}">More info!</a>
+                {% endif %}
             </div>
         </div>
         <!-- Call to Action-->
@@ -42,24 +44,26 @@
         </div>
         <!-- Content Row-->
         <div class="row gx-4 gx-lg-5 text-white">
-            {% for task in tasks %}
-                <div class="col-lg-4 lg-sm-6 mb-5">
-                    <div class="card h-100 bg-gradient"
-                         style="background: linear-gradient(to right top, black, gray,slategrey, bisque)">
-                        <div class="card-body">
-                            <h2 class="card-title"><a class="text-decoration-none text-dark"
-                                                      href='{% url 'task_detail' task.id %}'>{{ task.title }}</a></h2>
-                            <p class="card-text">{{ task.description | truncatewords:5 }}</p>
-                            <p class="card-small">Status: {{ task.get_status_display }}</p>
-                            <p class="card-small">Due date: {{ task.due_date }}</p>
+            {% if tasks %}
+                {% for task in tasks %}
+                    <div class="col-lg-4 lg-sm-6 mb-5">
+                        <div class="card h-100 bg-gradient"
+                             style="background: linear-gradient(to right top, black, gray,slategrey, bisque)">
+                            <div class="card-body">
+                                <h2 class="card-title"><a class="text-decoration-none text-dark"
+                                                          href='{% url 'task_detail' task.id %}'>{{ task.title }}</a>
+                                </h2>
+                                <p class="card-text">{{ task.description | truncatewords:5 }}</p>
+                                <p class="card-small">Status: {{ task.get_status_display }}</p>
+                                <p class="card-small">Due date: {{ task.due_date }}</p>
+                            </div>
+                            <div class="card-footer"><a class="btn btn-secondary btn-sm"
+                                                        href="{% url 'task_detail' task.id %}">More Info</a></div>
                         </div>
-                        <div class="card-footer"><a class="btn btn-secondary btn-sm"
-                                                    href="{% url 'task_detail' task.id %}">More Info</a></div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            {% endif %}
         </div>
-
         <div class="d-flex justify-content-center">
             <!-- Display pagination links -->
             {% if tasks.has_other_pages %}
