--- a/CW/week16/task_management/templates/base.html
+++ b/CW/week16/task_management/templates/base.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-    <title>Small Business - Start Bootstrap Template</title>
+    <title>
+        Small Business - Start Bootstrap Template
+    </title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="../statics/assets/favicon.ico"/>
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -23,17 +25,31 @@
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" href="">Start Task management</a>
+        <a class="navbar-brand" href="">
+            Start Task management
+        </a>
+        <small>
+            {% if request.user.is_authenticated %}
+                Welcome {{ request.user.username }}
+            {% else %}
+                Please register or login
+            {% endif %}
+        </small>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page"
+                <li class="nav-item"><a class="nav-link" aria-current="page"
                                         href="{% url 'home_page' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'task_list' %}">Tasks</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'search' %}">Search</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
+                {% endif %}
                 {% block nav %}
                 {% endblock %}
             </ul>
