--- a/CW/week21/MusicPlayer/templates/song/song_detail.html
+++ b/CW/week21/MusicPlayer/templates/song/song_detail.html
@@ -3,7 +3,8 @@
 {% block content %}
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url({% static 'img/bg-img/breadcumb3.jpg' %});">
+    <section class="breadcumb-area bg-img bg-overlay"
+             style="background-image: url({% static 'img/bg-img/breadcumb3.jpg' %});">
         <div class="bradcumbContent">
             <p>See what’s new</p>
             <h2>Song Info</h2>
@@ -82,12 +83,14 @@
                                         <i class="bi bi-heart-fill {% if song.liked %} like_red {% endif %}"></i>
                                     </button>
                                     <small id="like_count">{{ song.likes }}</small>
-                                    <a data-toggle="collapse" href="#collapseExample1"
-                                       role="button"
-                                       aria-expanded="false"
-                                       aria-controls="collapseExample"
-                                       class="advanced text-decoration-none text-dark ml-2">
+                                    {% if request.user|has_vip_perm:"Managers" %}
+                                        <a data-toggle="collapse" href="#collapseExample1"
+                                           role="button"
+                                           aria-expanded="false"
+                                           aria-controls="collapseExample"
+                                           class="advanced text-decoration-none text-dark ml-2">
                                         <i class="bi bi-bookmark-plus"></i>
+                                    {% endif %}
                                     </a>
                                 </form>
                             </div>
@@ -118,37 +121,39 @@
                                         </div>
                                     </form>
                                 </div>
-                                {% if playlists %}
-                                    <div class="col-12">
-                                        <form method="post" action="{% url 'social:update_playlist' %}"
-                                              id="selectPlaylist"
-                                              class="align-items-center justify-content-center p-0 m-0">
-                                            {% csrf_token %}
-                                            <input type="hidden" name="song_id" value="{{ song.id }}">
-                                            <input type="hidden" name="playlist_input" value="">
-                                            <div class="justify-content-between d-flex row">
-                                                <div class="col-8">
-                                                    <select name="playlist" id="dselect-example" class="form-select"
-                                                            data-live-search="true">
-                                                        <option value="" disabled selected>-- Choose a Playlist --
-                                                        </option>
-                                                        {% for playlist in playlists %}
-                                                            {% if song not in playlist.song_list %}
-                                                                <option name="playlist_option"
-                                                                        value="{{ playlist.id }}">{{ playlist.title }}</option>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    </select>
+                                {% if request.user|has_vip_perm:"Managers" %}
+                                    {% if playlists %}
+                                        <div class="col-12">
+                                            <form method="post" action="{% url 'social:update_playlist' %}"
+                                                  id="selectPlaylist"
+                                                  class="align-items-center justify-content-center p-0 m-0">
+                                                {% csrf_token %}
+                                                <input type="hidden" name="song_id" value="{{ song.id }}">
+                                                <input type="hidden" name="playlist_input" value="">
+                                                <div class="justify-content-between d-flex row">
+                                                    <div class="col-8">
+                                                        <select name="playlist" id="dselect-example" class="form-select"
+                                                                data-live-search="true">
+                                                            <option value="" disabled selected>-- Choose a Playlist --
+                                                            </option>
+                                                            {% for playlist in playlists %}
+                                                                {% if song not in playlist.song_list %}
+                                                                    <option name="playlist_option"
+                                                                            value="{{ playlist.id }}">{{ playlist.title }}</option>
+                                                                {% endif %}
+                                                            {% endfor %}
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-2">
+                                                        <button type="submit" class="btn oneMusic-btn mt-1"><i
+                                                                class="bi bi-check2-circle">Select</i>
+                                                        </button>
+                                                    </div>
                                                 </div>
-                                                <div class="col-2">
-                                                    <button type="submit" class="btn oneMusic-btn mt-1"><i
-                                                            class="bi bi-check2-circle">Select</i>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                            <div class="alert" role="alert"><p id="msg1"></p></div>
-                                        </form>
-                                    </div>
+                                                <div class="alert" role="alert"><p id="msg1"></p></div>
+                                            </form>
+                                        </div>
+                                    {% endif %}
                                 {% endif %}
                             </div>
                         {% endif %}
